tests/snapshots/regression/semantic_types__type_classes__missing_instance_error.snap
---
source: tests/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/semantic_types/type_classes/missing_instance_error.flx
exit_code: 1

[1 of 7] Compiling  Assert
[2 of 7] Compiling  IO
[3 of 7] Compiling  List
[4 of 7] Compiling  Numeric
[5 of 7] Compiling  Option
[6 of 7] Compiling  String
• 1 error • tests/fixtures/semantic_types/type_classes/missing_instance_error.flx
error[E444]: No Type Class Instance

No instance for `Sizeable<String>`.

  tests/fixtures/semantic_types/type_classes/missing_instance_error.flx:10:5
   |
10 |     size("flux")
   |     ^^^^^^^^^^^^

Hint:
  Add an instance: `instance Sizeable<String> { ... }`
